force-app/main/default/objects/FacturaDetalle__c/FacturaDetalle__c.object-meta.xml
<CustomObject>
    <label>Factura Detalle</label>
    <nameField>
        <label>Nombre de Factura Detalle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas Detalle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>