force-app/main/default/objects/FacturaDetalle__c/fields/Codigo_de_la_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_la_sucursal__c</fullName>
    <label>Código de la sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>