force-app/main/default/objects/FacturaDetalle__c/fields/CodigoDeLaUnidadDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeLaUnidadDeNegocio__c</fullName>
    <label>Código de la unidad de negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>