force-app/main/default/objects/FacturaDetalle__c/fields/CodigoItem__c.field-meta.xml
<CustomField>
    <fullName>CodigoItem__c</fullName>
    <label>Código del producto facturado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>