force-app/main/default/objects/FacturaDetalle__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas Detalle</relationshipLabel>
    <relationshipName>Facturas_Detalle</relationshipName>
    <type>Lookup</type>
</CustomField>