force-app/main/default/objects/FacturaDetalle__c/fields/DescuentoDeLinea__c.field-meta.xml
<CustomField>
    <fullName>DescuentoDeLinea__c</fullName>
    <label>Descuento de linea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>