force-app/main/default/objects/FacturaDetalle__c/fields/Facturas_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Facturas_Maestro__c</fullName>
    <label>Factura</label>
    <referenceTo>FacturasMaestro__c</referenceTo>
    <relationshipLabel>Facturas Detalle</relationshipLabel>
    <relationshipName>Facturas_Detalle</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>