force-app/main/default/objects/FacturaDetalle__c/fields/IdExt_Detalle_Factura__c.field-meta.xml
<CustomField>
    <fullName>IdExt_Detalle_Factura__c</fullName>
    <externalId>true</externalId>
    <label>IdExt Detalle Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>