force-app/main/default/objects/FacturaDetalle__c/fields/Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Impuesto__c</fullName>
    <label>Impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>