force-app/main/default/objects/FacturaDetalle__c/fields/TotalLinea__c.field-meta.xml
<CustomField>
    <fullName>TotalLinea__c</fullName>
    <label>Total de la linea facturada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>