force-app/main/default/objects/FacturaDetalle__c/fields/UnidadOrdenada__c.field-meta.xml
<CustomField>
    <fullName>UnidadOrdenada__c</fullName>
    <label>Cantidad ordenada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>