force-app/main/default/objects/FacturaDetalle__c/fields/UnidadSurtida__c.field-meta.xml
<CustomField>
    <fullName>UnidadSurtida__c</fullName>
    <label>Cantidad surtida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>